# midsc

./: CMakeLists.txt  README.md  TUX.txt  dmapp.c  login.c  make.sh  mid.cfg  mid.sh  mid2.cfg  midsc  midsc.c  midsc.h  mod_sc.c  notify.c  route.cfg  route.txt  scpool.c  scpool.h  set_sp.c  set_sp.s  set_sp64.s  t.c  tmp.c  transfer.c  ttcm.c  ttcm.mk  uc_tcp.c
